fix(AccountSwitch): set the right spacing between title and arrow

--- a/src/ducks/account/AccountSwitch.styl
+++ b/src/ducks/account/AccountSwitch.styl
@@ -143,6 +143,7 @@
     margin-bottom 1rem
     overflow hidden
     cursor pointer
+    align-items center
 
     +small-screen()
         margin-bottom 0
@@ -153,3 +154,9 @@
 
 .AccountSwitch--small .AccountSwitch__SelectText
     font-size 1.125rem
+
+.DownArrow
+    margin-left 0.5rem
+
+.AccountSwitch--small .DownArrow
+    margin-left 0.375rem
